axelor-web/src/main/webapp/css/view.form.css
/* ... */
table.form-layout td.form-item .stackbar {
	position: relative;
}

table.form-layout td.form-item .stackbar.inline-editable {
	min-height: 200px;
}

.icons-bar {
	display: inline-block;
	padding-top: 4px;
}

.icons-bar i {
	margin: 2px;
	padding: 2px;
	cursor: pointer;
}

table.form-layout td.form-item .slickgrid {
	position: absolute;
	left: 0px; right: 0px;
	top: 26px; bottom: 0px;
	border-top: none;
}

td.form-item > * {
	position: relative;	
}

.border-box,
.bordered-box {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	    -ms-box-sizing: border-box;
	        box-sizing: border-box;
}

.bordered,
.bordered-box {
	border: 1px solid #DDD;
	-webkit-border-radius: 4px;
	   -moz-border-radius: 4px;
	    -ms-border-radius: 4px;
	        border-radius: 4px;
}

.form-item .disabled-overlay {
	position: absolute;
	top: 0; left: 0; right: 0; bottom: 0;
	z-index: 10;
}

.form-item .form-item-group > .disabled-overlay {
	top: 12px;
}

.form-item .form-item-group[x-show-title="false"] > .disabled-overlay {
	top: 0;
}

.ui-state-disabled .ui-state-disabled {
	opacity: 1;
}

.form-item .form-item-group {
	padding: 0;
}

.form-item .form-item-group.bordered-box {
	padding: 4px;
	padding-top: 0;
}

.form-item .form-item-group > legend i[class^=icon] {
	color: #CCC;
	height: 10px;
	margin-right: 4px;
	display: inline-block;
	cursor: pointer;
}

.form-item .form-item-group > legend i[class^=icon]:hover {
	 text-decoration: none;
	 color: inherit;
}

.form-item .form-item-group > legend {
	
	width: auto;
	margin: 0;
	margin-left: 10px;
	padding: 0 4px;
		
	font-size: inherit;
	line-height: 1.4em;
	
	border: none;
}

.form-item .form-item-portlet,
.form-item .form-item-portlet .portlet {
	min-height: 250px;
}

.form-item .image-item div.btn-group {
	position: absolute;
	left: 20px;
	bottom: 12px;
}

.form-item .nested-editor > legend > span.legend-toolbar {
	padding-left: 4px;
}

.form-item .nested-editor {
	margin-top: -3px !important;
}

.form-item .nested-editor.inline-form {
	position: relative;
	border: 0;
	padding-top: 30px;
}

.form-item .nested-editor.detail-form {
	border-top: 0;
	padding-top: 8px; 
}

.form-item .form-item-container.ng-invalid > textarea,
.form-item .form-item-container.ng-invalid > .picker-input input,
.form-item .form-item-container.ng-invalid > .ui-spinner input,
.form-item .form-item-container.ng-invalid > input,
.form-item .form-item-container.ng-invalid > .tag-select,
.form-item .input-append.ng-invalid > input,
.form-item .picker-input.ng-invalid > input {
	border-color: #B94A48;
}

.form-item .form-item-container.ng-invalid:focus,
.form-item .form-item-container.ng-invalid > input:focus,
.form-item .picker-input.ng-invalid > input:focus {
	border-color: #953B39;
	
	-webkit-box-shadow: 0 0 6px #D59392;
	   -moz-box-shadow: 0 0 6px #D59392;
	        box-shadow: 0 0 6px #D59392;
}

.form-item form {
	margin: 0;
}

.form-item div.code-editor {
	border: 1px solid #DDD;
}

.form-item span.error {
	color: #953B39;
}

.form-item .span-item {
	display: inline-block;
	padding: 2px;
	padding-left: 6px;
}

.form-item .spacer-item {
	-webkit-user-select: none;
	   -moz-user-select: none;
	        user-select: none;
}

.form-item .ui-spinner {
	padding-right: 0;
	border: 0;
	overflow: inherit;
}

.form-item .ui-spinner .ui-spinner-up {
	margin-top: 1px;
}

.form-item .ui-spinner .ui-spinner-down {
	margin-bottom: 1px;
}

table.form-layout td.form-item .ui-spinner input {
	width: 100%;
	text-align: right;
	padding-right: 16px;
	margin: 0;
}

.form-item ul.radio-select {
	list-style-type: none;
	overflow: hidden;
	padding-top: 3px;
}

.form-item ul.radio-select > li {
	float: left;
	margin: 0 4px;
}

.form-item ul.radio-select-vertical > li {
	float: none;
}

.form-item ul.radio-select > li input[type="radio"],
.form-item ul.radio-select > li input[type="checkbox"] {
	margin-top: -2px;
}

.form-item ul.radio-select.readonly > li label {
	cursor: default;
}

table.field-details {
	width: 100px;
}

table.field-details th {
	width: 5%;
	text-align: right;
}

table.field-details th,
table.field-details td {
	white-space: nowrap;
}

table.field-details .help-text hr {
	margin: 9px 0;
}

.popover {
	width: auto;
	max-width: inherit;
	z-index: 2147483647;
}

.popover-inner {
	width: inherit;
	min-width: 280px;
	max-width: 500px;
	display: table;
	overflow: hidden;
}

.ws-nowrap {
	white-space: nowrap;
}

.subtotal {
	float: right;
}

.subtotal,
.subtotal input {
	white-space: nowrap;
	text-align: right;
}

.subtotal label {
	font-weight: normal !important;	
}

.subtotal,
.subtotal * {
	min-width: auto !important;
	width: auto !important;
	white-space: nowrap !important;
}

.subtotal .form-label,
.subtotal .form-item {
	padding: 2px 0 !important;
}

.subtotal .display-text {
	width: 100% !important;
	padding-left: 22px !important;
}

.subtotal-total {
	border-top: 1px solid #ccc;
	font-size: 18px;
	padding-top: 6px !important;
}

.subtotal-total .display-text {
	font-weight: bold;
	padding-top: 0 !important;
}

.nav-select {
	overflow: hidden;
}

.nav-select ul {
	list-style: none;
	white-space: nowrap;
	overflow: hidden;
	display: inline-block;
	padding-right: 35px;
	height: 38px;
}

.nav-select li {
	display: inline-block;
	white-space: nowrap;
}

.nav-select li a {
	text-decoration: none;
	padding: 10px 0 10px 55px;
	background: #e2e2e2;
	position: relative;
	display: block;
	float: left;
}

.nav-select li a:after,
.nav-select li a:before {
	content: " ";
	display: block;
	position: absolute;
	width: 0;
	height: 0;
	margin-top: -50px;
	left: 100%;
	top: 50%;
	border-top: 50px solid transparent;
	border-bottom: 50px solid transparent;
	-moz-transform: scale(.9999);
}

.nav-select li a:after {
	border-left: 30px solid #e2e2e2;
	z-index: 2;
}

.nav-select li a:before {
	border-left: 30px solid white;
	margin-left: 2px;
	z-index: 1;
}

.nav-select li:first-child a {
	padding-left: 20px;
}
/* ... */

